--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "csv-utils",
   "version": "1.0.0",
-  "description": "``` php -S localhost:9000 http://localhost:9000/ ```",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node src/index.js"
   },
   "repository": {
     "type": "git",
