feat: ファイル名をコマンドライン引数で実行

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node src/index.js"
+    "test:success": "node src/index.js success.csv",
+    "test:example": "node src/index.js success.csv.example"
   },
   "repository": {
     "type": "git",
